crates/snapshot-tests/tests/snapshots/parser__bad_floats__trailing_neg.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[InvalidFloat]: invalid float at `a`
  ┌─ trailing_neg:1:5
  │
1 │ a = 0.0e-
  │     ^^^^^ invalid float


error: invalid float at `a`
 --> trailing_neg:1:5
  |
1 | a = 0.0e-
  |     ^^^^^ invalid float
Error {
    kind: "InvalidFloat",
    message: "invalid float",
    span: 4..9,
    path: Some(
        "a",
    ),
}
